# fleet_skills

./: .gitignore  CONTEXT.md  GRILL_KICKOFF_PROMPT.md  HANDOFF.md  PIPELINE.md  README.md  SETUP-GRILL-SESSION.md  pyproject.toml
adr/: 0001-skills-vs-spells.md  0002-project-store-on-huxley.md  0003-project-structure.md  0004-reconciliation-with-prior-ul.md  0005-artifact-versioning-provenance.md  0006-thin-manifest.md  0007-recipe-storage-hybrid.md  0008-provenance-core-db.md  0009-spellbook-in-repo.md  0010-griptape-separate-conductor.md  0011-provenance-schema-physical-design.md  0012-orchestration-ringmaster-roustabout.md  0013-versionrecorded-fires-after-landing.md  0014-run-type-single-dispatch-key.md  0015-shot-code-includes-episode-token.md  0016-per-run-type-spec.md  0017-control-pass-generalizes-depth-pass.md  0018-roustabout-flows.md  0019-event-delivery-notify-over-outbox.md  0020-sequence-shared-state-and-hoist.md  0021-sequence-look-rename.md  0022-hoist-is-publish-driven.md  0023-override-store.md
db/: README.md  apply_migrations.py  reset_test.sql  test_db.sh
db/fixtures/: hoist_demo.py
db/migrations/: 0001_initial_schema.sql  0002_run_spec.sql  (+4 more)
fleet/: __init__.py  add_sequence.py  add_shot.py  cast.py  cli.py  config.py  db.py  hoist.py  manifest.py  naming.py  override.py  repository.py  scaffold.py  style.py
roustabout/: README.md  __init__.py  config.py  handlers.py  requirements.txt  worker.py
schemas/: manifest.example.json  manifest.schema.json
submitter/: README.md  __init__.py  config.py  emit_demo.py  events.py  writes.py
(+6 files in other folders)
