[project]
name = "fleet"
version = "0.1.0"
description = "Fleet production tooling: shared provenance DB-access + project scaffolding."
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.1"]

[project.scripts]
create-project = "fleet.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fleet"]
