[project]
name = "fleet"
version = "0.1.0"
description = "Fleet production tooling: shared provenance DB-access + project scaffolding."
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.1", "requests>=2.31", "rich>=13"]

[project.scripts]
create-project = "fleet.cli:main"
add-shot = "fleet.add_shot:main"
add-sequence = "fleet.add_sequence:main"
hoist = "fleet.hoist:main"
magnific-gen = "fleet.runners.magnific:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fleet", "fleet.runners"]
